# src/main/java/com/clean/architecture/adapters/in/rest/controller/web/UserController.java
@@ -1,11 +1,10 @@
 package com.clean.architecture.adapters.in.rest.controller.web;
 
-import com.clean.architecture.adapters.in.rest.presenter.user.UserListPresenter;
-import com.clean.architecture.adapters.in.rest.presenter.user.UserSinglePresenter;
+import com.clean.architecture.adapters.in.rest.presenter.user.UserPresenter;
 import com.clean.architecture.application.port.in.delegate.UserUCaseDelegate;
 import com.generated.swaggerCodegen.api.CleanArchitectureApi;
+import com.generated.swaggerCodegen.model.ListUserBackendResponse;
 import com.generated.swaggerCodegen.model.SingleUserBackendResponse;
-import com.generated.swaggerCodegen.model.UserBackendResponse;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -13,17 +12,16 @@ import org.springframework.stereotype.Service;
 @AllArgsConstructor
 @Service
 public class UserController implements CleanArchitectureApi {
-    private final UserListPresenter listPresenter;
-    private final UserSinglePresenter singlePresenter;
+    private final UserPresenter presenter;
     private final UserUCaseDelegate delegate;
 
     @Override
-    public ResponseEntity<UserBackendResponse> getAllUsers() {
-        return ResponseEntity.ok(this.listPresenter.present(this.delegate.getAll()));
+    public ResponseEntity<ListUserBackendResponse> getAllUsers() {
+        return ResponseEntity.ok(this.presenter.mapToListResponse(this.delegate.getAll()));
     }
 
     @Override
     public ResponseEntity<SingleUserBackendResponse> getUserByUid(final String uid) {
-        return ResponseEntity.ok(this.singlePresenter.present(this.delegate.getByUid(uid)));
+        return ResponseEntity.ok(this.presenter.mapToSingleResponse(this.delegate.getByUid(uid)));
     }
 }
